--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ footer-links:
   flickr:
   github: bh1505
   instagram:
-  linkedin: bh1505
+  linkedin:
   pinterest:
   twitter: @Brandon_He
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
