--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ footer-links:
   instagram:
   linkedin:
   pinterest:
-  twitter: @Brandon_He
+  twitter: Brandon_He
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
